# SimpleRustGL

./: Cargo.toml
application/: Cargo.toml
application/resources/shaders/cube/: cube.geom  cube.vert
application/src/: main.rs
application/src/application/: mod.rs  world.rs
example/: Cargo.toml
example/drawing/: Cargo.toml
example/drawing/src/application/: gfx.rs  world.rs
example/drawing/src/joints/: mod.rs
example/pacman/: Cargo.toml
example/resources/shaders/cube/: cube.frag
example/src/application/: gfx.rs  world.rs
example/src/joints/: quardcurve.rs
src/: lib.rs  main.rs  stickman.rs
src/application/: gfx.rs  mod.rs  world.rs
src/application/shaders/: cube_march.rs  mod.rs
src/gfx/: error.rs  mod.rs
src/gfx/buffer/: buffer.rs  bufferdata.rs  buffermap.rs  buffertype.rs  ebo.rs  index_vbo.rs  indexprimitive.rs  mod.rs  primitive.rs  vao.rs  vbo.rs
src/gfx/graphics/: program.rs
src/gfx/graphics/shader/: fragment.rs  mod.rs  shader.rs
src/gfx/shader/: fragment.rs  geometry.rs  mod.rs  program.rs  shader.rs  vertex.rs
src/graphics/: program.rs  uniform.rs
src/joints/: quardcurve.rs
src/storage/: mod.rs
src/storage/buffer/: buffer.rs  mod.rs  primitive.rs  readbuffermap.rs  writebuffermap.rs
wrapper/: Cargo.toml
wrapper/src/: error.rs  lib.rs
wrapper/src/buffer/: buffer.rs  bufferdata.rs  format.rs  mod.rs  primitive.rs  vao.rs  writebuffermap.rs
wrapper/src/graphics/: mod.rs  program.rs  uniform.rs
wrapper/src/graphics/shader/: geometry.rs  shader.rs
