[package]
name = "pacman"
version = "0.1.0"
authors = ["mart368b <martinpinholt@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = {version = "0.33", features = ["bundled"]}
nalgebra = "0.19"
anyhow = "1.0.26"
gl = "0.14.0"
simple_gl = {path = "../.."}

[[bin]]
name = "pacman"
path = "src/main.rs"